k8_deployments/integration-control-plane/kubernetes/deployment.yaml
# Copyright (c) 2026, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# WSO2 Inc. licenses this file to you under the Apache License,
# Version 2.0 (the "License"); you may not use this file except
# in compliance with the License.
# You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: icp-deployment
  namespace: icp
  labels:
    app: icp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: icp
  template:
    metadata:
      labels:
        app: icp
    spec:
      containers:
        - name: icp-container
          image: ramilu90/wso2icp:2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9445
              name: https
            - containerPort: 9446
              name: graphql
            - containerPort: 9448
              name: observability
            - containerPort: 9449
              name: opensearch
          volumeMounts:
            - name: icp-conf
              mountPath: /home/wso2/wso2-integrator-icp-2.0.0-SNAPSHOT/conf/deployment.toml
              subPath: deployment.toml
      volumes:
        - name: icp-conf
          configMap:
            name: icp-conf
