k8_deployments/integration-control-plane/kubernetes/service.yaml
# Copyright (c) 2026, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# WSO2 Inc. licenses this file to you under the Apache License,
# Version 2.0 (the "License"); you may not use this file except
# in compliance with the License.
# You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

apiVersion: v1
kind: Service
metadata:
  name: icp-service
  namespace: icp
spec:
  type: ClusterIP
  selector:
    app: icp
  ports:
    - port: 9445
      targetPort: 9445
      name: https
      appProtocol: https
    - port: 9446
      targetPort: 9446
      name: graphql
      appProtocol: https
    - port: 9448
      targetPort: 9448
      name: observability
      appProtocol: https
    - port: 9449
      targetPort: 9449
      name: opensearch
      appProtocol: https
